--- a/msvc9/LibSoX.vcproj
+++ b/msvc9/LibSoX.vcproj
@@ -680,6 +680,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\downsample.c"
+				>
+			</File>
+			<File
 				RelativePath="..\src\earwax.c"
 				>
 			</File>
