--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -77,7 +77,7 @@ libsox_la_SOURCES += \
 	rate_poly_fir.h remix.c repeat.c reverb.c reverse.c silence.c \
 	sinc.c skeleff.c speed.c speexdsp.c splice.c stat.c stats.c \
 	stretch.c swap.c synth.c tempo.c tremolo.c trim.c vad.c vol.c \
-	ignore-warning.h upsample.c hilbert.c
+	ignore-warning.h upsample.c hilbert.c downsample.c
 if HAVE_PNG
     libsox_la_SOURCES += spectrogram.c
 endif
