Update cmake to require libsndfile-1.0.12 or newer.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,16 +134,15 @@ if (HAVE_PNG)
   endif (${spectrogram1})
 endif (HAVE_PNG)
 optional2(HAVE_PULSEAUDIO pulse/simple.h pulse-simple pa_simple_new pulse pa_strerror pulseaudio)
-optional(HAVE_SNDFILE sndfile.h sndfile sf_open sndfile)
-optional(HAVE_SNDFILE sndfile.h sndfile sf_open fap)
-optional(HAVE_SNDFILE sndfile.h sndfile sf_open mat4)
-optional(HAVE_SNDFILE sndfile.h sndfile sf_open mat5)
-optional(HAVE_SNDFILE sndfile.h sndfile sf_open paf)
-optional(HAVE_SNDFILE sndfile.h sndfile sf_open pvf)
-optional(HAVE_SNDFILE sndfile.h sndfile sf_open sd2)
-optional(HAVE_SNDFILE sndfile.h sndfile sf_open w64)
-optional(HAVE_SNDFILE sndfile.h sndfile sf_open xi)
-optional(HAVE_SNDFILE_1_0_12 sndfile.h sndfile sf_open_virtual caf)
+optional(HAVE_SNDFILE sndfile.h sndfile sf_open_virtual sndfile)
+optional(HAVE_SNDFILE sndfile.h sndfile sf_open_virtual fap)
+optional(HAVE_SNDFILE sndfile.h sndfile sf_open_virtual mat4)
+optional(HAVE_SNDFILE sndfile.h sndfile sf_open_virtual mat5)
+optional(HAVE_SNDFILE sndfile.h sndfile sf_open_virtual paf)
+optional(HAVE_SNDFILE sndfile.h sndfile sf_open_virtual pvf)
+optional(HAVE_SNDFILE sndfile.h sndfile sf_open_virtual sd2)
+optional(HAVE_SNDFILE sndfile.h sndfile sf_open_virtual w64)
+optional(HAVE_SNDFILE sndfile.h sndfile sf_open_virtual xi)
 optional(HAVE_SPEEXDSP speex/speex_preprocess.h speexdsp speex_preprocess_run speexdsp)
 optional(HAVE_SUN_AUDIOIO_H sun/audioio.h c ioctl sunaudio)
 if (NOT HAVE_SUN_AUDIOIO_H)
