Rewritten trim effect
From-scratch rewrite of the trim effect. Any number of parameters may
be given, and the effect will alternate between discarding and copying
audio at each position. Time values may also be specified relative to
the end of audio, if audio length is known.

The old "trim" syntax is a special case of the extended syntax (only
one or two parameters allowed, first must not use "=", no positions
relative to end-of-audio), so backwards compatibility is maintained.

This also resolves feature request 2941349.

--- a/FEATURES.in
+++ b/FEATURES.in
@@ -93,7 +93,7 @@ The audio effects/tools included in this release are as follows:
 ** pad: Pad (usually) the ends of the audio with silence
 ** silence: Remove portions of silence from the audio
 ** splice: Perform the equivalent of a cross-faded tape splice
-** trim: Trim the ends of the audio
+** trim: Cuts portions out of the audio
 ** vad: Voice activity detector
 
 * Mixing effects
