--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,7 +115,6 @@ if(CMAKE_COMPILER_IS_GNUCC)
   endif(HAVE_OPENMP)
 endif(CMAKE_COMPILER_IS_GNUCC)
 optional(HAVE_ID3TAG id3tag.h id3tag id3_file_open "")
-optional(HAVE_SNDIO CoreAudio/CoreAudio.h CoreAudio AudioHardwareGetProperty coreaudio)
 optional(HAVE_SNDIO sndio.h sndio sio_open sndio)
 optional(HAVE_AO ao/ao.h ao ao_play ao)
 optional(HAVE_FLAC FLAC/all.h FLAC FLAC__stream_encoder_new flac)
@@ -186,3 +185,15 @@ endif (NOT EXTERNAL_GSM)
 if (NOT EXTERNAL_LPC10)
   add_subdirectory(lpc10)
 endif (NOT EXTERNAL_LPC10)
+
+if(APPLE)
+	find_library(COREAUDIO_LIBRARY CoreAudio)
+	mark_as_advanced(COREAUDIO_LIBRARY)
+	if(COREAUDIO_LIBRARY)
+		set(HAVE_COREAUDIO 1)
+		set(optional_srcs ${optional_srcs} coreaudio)
+	endif(COREAUDIO_LIBRARY)
+	set(optional_libs ${optional_libs} ${COREAUDIO_LIBRARY})
+endif(APPLE)
+
+
