--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -76,7 +76,7 @@ libsox_la_SOURCES += \
 	noisered.h output.c overdrive.c pad.c phaser.c rate.c \
 	rate_filters.h rate_half_fir.h rate_poly_fir0.h rate_poly_fir.h \
 	remix.c repeat.c reverb.c reverse.c silence.c sinc.c skeleff.c \
-	speed.c speexdsp.c splice.c stat.c stats.c stretch.c swap.c \
+	speed.c splice.c stat.c stats.c stretch.c swap.c \
 	synth.c tempo.c tremolo.c trim.c upsample.c vad.c vol.c \
 	ignore-warning.h
 if HAVE_PNG
