fixes to bit-rot support files and cmake build files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,7 @@ endmacro(optional4)
 project(sox)
 
 if(CMAKE_COMPILER_IS_GNUCC)
-  add_definitions(-D_FORTIFY_SOURCE=2 -Wall -W -Wmissing-prototypes -Wstrict-prototypes -pedantic)
+	add_definitions(-D_FORTIFY_SOURCE=2 -Wall -W -Wmissing-prototypes -Wstrict-prototypes -pedantic -Wno-format -Wno-long-long)
 endif(CMAKE_COMPILER_IS_GNUCC)
 
 include(TestBigEndian)
@@ -135,6 +135,7 @@ if (HAVE_PNG)
 endif (HAVE_PNG)
 optional2(HAVE_PULSEAUDIO pulse/simple.h pulse-simple pa_simple_new pulse pa_strerror pulseaudio)
 optional(HAVE_SNDFILE sndfile.h sndfile sf_open_virtual sndfile)
+optional(HAVE_SNDFILE sndfile.h sndfile sf_open_virtual caf)
 optional(HAVE_SNDFILE sndfile.h sndfile sf_open_virtual fap)
 optional(HAVE_SNDFILE sndfile.h sndfile sf_open_virtual mat4)
 optional(HAVE_SNDFILE sndfile.h sndfile sf_open_virtual mat5)
