--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,10 +109,10 @@ optional(HAVE_ALSA alsa/asoundlib.h asound snd_pcm_open alsa)
 optional(HAVE_AMRNB amrnb/sp_dec.h amrnb Decoder_Interface_init amr-nb)
 optional(HAVE_AMRWB amrwb/dec.h amrwb D_IF_init amr-wb)
 if(CMAKE_COMPILER_IS_GNUCC)
-  optional(HAVE_OPENMP omp.h gomp omp_get_thread_num "")
-  if(HAVE_OPENMP)
+  optional(HAVE_GOMP omp.h gomp omp_get_thread_num "")
+  if(HAVE_GOMP)
     add_definitions(-fopenmp)
-  endif(HAVE_OPENMP)
+  endif(HAVE_GOMP)
 endif(CMAKE_COMPILER_IS_GNUCC)
 optional(HAVE_ID3TAG id3tag.h id3tag id3_file_open "")
 optional(HAVE_SNDIO sndio.h sndio sio_open sndio)
