--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -90,6 +90,8 @@ if HAVE_MAGIC
 libsox_la_LIBADD += @MAGIC_LIBS@
 endif
 
+libsox_la_LIBADD += @GOMP_LIBS@
+
 libsox_la_CFLAGS = @WARN_CFLAGS@
 libsox_la_LDFLAGS = @APP_LDFLAGS@ -version-info @SHLIB_VERSION@
 
